--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    Doc
+    TestRoome
     <script src="./libs/colyseus.js"></script>
     <script src="./libs/testroom.js"></script>
   </body>
